# res_mgmt

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.org  res_mgmt.h  res_mgmt_test.cpp
